@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="59"
+VERSION_BUILD="60"
 
 # $Log$
+#
+# BUILD : 1.3.0.60 (SVN)
+# BUGS  : N/A
+# NOTES : inspircd11 CAPAB support was missing
 #
 # BUILD : 1.3.0.59 (SVN)
 # BUGS  : N/A
