@@ -14,8 +14,9 @@ Provided by Denora Stats Dev. <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+08/11 F [inspircd11] CAPAB support                                [ #00]
 08/11 F Fixed SQUIT not handled properly on P10 IRCds             [#395]
-08/10 F InspIRCd11 Local kills are now detected                   [#404]
+08/10 F [inspircd11] Local kills are now detected                 [#404]
 08/10 F Fixed broken behavior on certain server splits            [#347]
 08/10 F Local kills are now detected by Denora (Unreal32 only)    [#404]
 08/09 F Fixed syntax error in include/version.sh                  [ #00]
